--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -34,8 +34,8 @@ register_toolchains(
 
     # "//toolchain/selectors:bootstrap_cross",
     "//toolchain/selectors:bootstrap",
-    "//toolchain/selectors:dev_tool",
-    "//toolchain/selectors:dev",
+    # "//toolchain/selectors:dev_tool",
+    # "//toolchain/selectors:dev",
     # "//toolchain/selectors:vmsys",
 
     "//toolchain/selectors:default",
