--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -8,7 +8,7 @@ load("//bzl:rules.bzl",
 load("//config:CONFIG.bzl",
      # "RUNTIME_OCAMLRUN",
      "OC_COMMON_CFLAGS",
-     "NO_MISSING_MLI_ERROR",
+     "IGNORE_MISSING_MLI",
      "PLATFORM_CFLAGS"
      # "OC_COMMON_CFLAGS",
      # "OC_NATIVE_CFLAGS",
@@ -16,15 +16,15 @@ load("//config:CONFIG.bzl",
      # "ROOT_SIG_OPTS"
      )
 
-MODULE_OPTS = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
-SIG_OPTS    = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
+MODULE_OPTS = ["-w", "-40"] #OC_COMMON_CFLAGS + PLATFORM_CFLAGS
+SIG_OPTS    = [] # OC_COMMON_CFLAGS + PLATFORM_CFLAGS
 # MODULE_OPTS = OC_COMMON_CFLAGS
 # SIG_OPTS    = OC_COMMON_CFLAGS
 
 # MODULE_OPTS = ROOT_MODULE_OPTS
 # SIG_OPTS    = ROOT_MODULE_OPTS
 
-STDLIB = ["//boot/lib:stdlib"]
+STDLIB = []
 
 # boot_archive(
 boot_library(
@@ -82,26 +82,23 @@ boot_module(
     sig    = "Compenv_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
-        "//utils:Warnings",
-        "//stdlib:Stdlib.Sys",
-        "//stdlib:Stdlib.String",
-        "//stdlib:Stdlib.Scanf",
-        "//utils:Profile",
-        "//stdlib:Stdlib.Printf",
-        "//stdlib:Stdlib.Printexc",
-        "//stdlib:Stdlib.Option",
-        "//utils:Misc",
         "//parsing:Location",
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Lexing",
-        ## (Int_arg_helper)
-        ## (Float_arg_helper)
-        "//stdlib:Stdlib.Filename",
-        "//utils:Config",
-        ## (Compiler_pass)
-        "//utils:Clflags",
+        # "//stdlib:Stdlib.Arg",
+        # "//stdlib:Stdlib.Filename",
+        # "//stdlib:Stdlib.Lexing",
+        # "//stdlib:Stdlib.List",
+        # "//stdlib:Stdlib.Option",
+        # "//stdlib:Stdlib.Printexc",
+        # "//stdlib:Stdlib.Printf",
+        "//stdlib:Stdlib.Scanf",
+        # "//stdlib:Stdlib.String",
+        # "//stdlib:Stdlib.Sys",
         "//utils:Ccomp",
-        "//stdlib:Stdlib.Arg",
+        "//utils:Clflags",
+        "//utils:Config",
+        "//utils:Misc",
+        "//utils:Profile",
+        "//utils:Warnings",
     ],
     visibility = [
         "//bytecomp:__pkg__",
@@ -262,7 +259,7 @@ boot_signature(
 boot_module(
     name   = "Main",
     struct = "main.ml",
-    opts = MODULE_OPTS + ["-w", "-70"],
+    opts = MODULE_OPTS + IGNORE_MISSING_MLI,
     deps   = STDLIB + [
         ":Maindriver", ## (Driver Maindriver)
         "//stdlib:Stdlib.Sys",
@@ -376,6 +373,7 @@ boot_module(
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.Sys",
+        "//stdlib:Stdlib",
         "//utils:Clflags",
         "//utils:Config",
         "//utils:Misc",
@@ -393,6 +391,7 @@ boot_signature(
     src  = "makedepend.mli",
     opts = SIG_OPTS,
     deps   = STDLIB + [
+        "//stdlib:Stdlib_cmi",
     ]
 )
 
@@ -454,7 +453,7 @@ boot_signature(
 boot_module(
     name   = "Optmain",
     struct = "optmain.ml",
-    opts = MODULE_OPTS + NO_MISSING_MLI_ERROR,
+    opts = MODULE_OPTS + IGNORE_MISSING_MLI,
     deps   = STDLIB + [
         ":Optmaindriver",
     ],
