update README; DCE, minor tweaks

--- a/config/mode/BUILD.bazel
+++ b/config/mode/BUILD.bazel
@@ -1,3 +1,5 @@
+##FIXME: rename //config/variant
+
 load("@bazel_skylib//rules:common_settings.bzl",
      "bool_flag",
      "string_flag", "string_setting")
