--- a/.bazelrc
+++ b/.bazelrc
@@ -1,30 +1,33 @@
-## put this in ~/.bazelrc to enable for all bazel projects
-# build --incompatible_enable_cc_toolchain_resolution
+## always use this setting:
+build --incompatible_enable_cc_toolchain_resolution
+## put it in ~/.bazelrc to enable for all bazel projects
 
 # build --toolchain_resolution_debug=.*
-# build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
+build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
 # build --toolchain_resolution_debug=//toolchain/type:bootstrap
 
 #### alternate toolchain: pass tc and profile if needed
 
-## macos > macos: use zig toolchain
-## build --extra_toolchains=@zig_sdk//toolchain:darwin_amd64
+## Zig
+## macos > macos:
+common:maczig --extra_toolchains=@zig_sdk//toolchain:darwin_amd64
 
-## linux>linux: use zig
-## zig on linux (amd) does not support some flags set by ./configre
+## linux:
+## zig on linux (amd) does not support some flags set by ./configure
 ## so we need to pass a customized tc profile
-# build --extra_toolchains=@zig_sdk//toolchain:linux_amd64_gnu.2.28,//toolchain/profile/selector/cc/linux:zig
+common:linuxzig --extra_toolchains=@zig_sdk//toolchain:linux_amd64_gnu.2.28,//toolchain/profile/selector/cc/linux:zig
 
-#### cross-builds: specify target platform and 1 toolchain per host (?)
+#### cross-builds: currently for runtimes only
+#### specify target platform and 1 toolchain per host (?)
 #### plus target profile if needed (zig needs it)
 
 ### macos > linux using zig tc (requires custom tc profile)
-# build --extra_toolchains=@zig_sdk//toolchain:linux_amd64_gnu.2.31,//toolchain/profile/selector/cc/linux:zig
-# build --platforms=@zig_sdk//platform:linux_amd64
+common:mac_linuxamd64 --extra_toolchains=@zig_sdk//toolchain:linux_amd64_gnu.2.31,//toolchain/profile/selector/cc/linux:zig
+common:mac_linuxamd64 --platforms=@zig_sdk//platform:linux_amd64
 
 ### linux > macos using zig
-# build --extra_toolchains=@zig_sdk//toolchain:darwin_amd64,//toolchain/profile/selector/cc/macos
-# build --platforms=@zig_sdk//platform:macos_amd64
+common:linuxamd64_macamd64 --extra_toolchains=@zig_sdk//toolchain:darwin_amd64,//toolchain/profile/selector/cc/macos
+common:linuxamd64_macamd64 --platforms=@zig_sdk//platform:macos_amd64
 
 ################################################################
 # build --action_env BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
