--- a/.bazelrc
+++ b/.bazelrc
@@ -8,7 +8,7 @@ common:show --subcommands=pretty_print
 common:show --verbose_failures
 
 # build --toolchain_resolution_debug=.*
-build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
+# build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
 # build --toolchain_resolution_debug=//toolchain/type:bootstrap
 
 #### alternate toolchain: pass tc and profile if needed
